src/objects/Batch__c.object
<CustomObject>
    <description>Aggregate value at the batch level of all related orders</description>
    <fields>
        <fullName>Aggregate_Value__c</fullName>
        <label>Aggregate Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <externalId>true</externalId>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Submission date of first order related to batch</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Orders__c</fullName>
        <label>Number of Orders</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_on_Tape__c</fullName>
        <description>Entered manually, after all orders have been entered and associated.</description>
        <label>Total on Tape</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{00000}</displayFormat>
        <label>Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>